# mkflag

./: Makefile.am  clean.sh  configure.ac  mkflag.c  test.sh
